# arche

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_collapse.sh
.github/: PULL_REQUEST_TEMPLATE.md
docs/: api_reference.md  getting_started.md  output_schema.md  parameters.md
examples/nakauchi2021/: README.md  plot_cr0_zscan.py  run_cr0_zscan.sh
params/: default.conf
src/: CMakeLists.txt
src/apps/chemistry_metal_grain/: CMakeLists.txt  main.cc
src/apps/chemistry_primordial/: CMakeLists.txt  main.cc
src/apps/collapse_metal_grain/: CMakeLists.txt  main.cc
src/apps/collapse_primordial/: CMakeLists.txt  main.cc
src/include/: chemistry.h  collapse_dynamics.h  cooling.h  cooling_grain.h  cooling_molecular.h  grain.h  hdf5_utils.h  partition_function.h  reaction.h  reaction_metal.h  reaction_metal_grain_charge.h  reaction_metal_grain_surface.h  reaction_table.h  solver.h  solver_metal.h  species.h  state.h
tools/: analyze_collapse.md  requirements.txt  resample_collapse.md
tools/eos_mhd_table_generator/: README.md  run_eos_table.sh
tools/eos_mhd_table_generator/params/: cases_core.csv  cases_extended.csv  cases_sample.csv  default.conf
tools/eos_mhd_table_generator/python/app/: build_eos_table.py  compare_case_matrix.py  compare_eos_table.py  compare_state_native_matrix.py  find_etaa_onset.py  generate_matrix_report_md.py  make_case_table.py  matrix_status.py  plot_case_matrix.py  plot_compare_eos_table.py  profile_build_runtime_matrix.py  profile_runtime_by_density.py  report_compare_matrix.py  resistivity_legacy.py  run_case_matrix.py  scan_etaa_outliers.py  summarize_etaa_outliers.py  update_todo_from_eval.py  validate_eos_table.py
tools/eos_mhd_table_generator/python/lib/: __init__.py  build_core.py  case_paths.py  compare_core.py  config_kv.py  mapping.py  plot_core.py  resistivity_legacy.py  table_io.py  validate_core.py
tools/python/: analyze_collapse.py  resample_collapse.py
(+1 files in other folders)
